--- a/templates/addProduct.html
+++ b/templates/addProduct.html
@@ -131,6 +131,15 @@
             <br>
             <input type="file" name="image">
           </div>
+          {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                    <div class="alert alert-danger" role="alert">
+                        {% for message in messages %}
+                            <span style="color: red;">{{ message }}</span><br>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                {% endwith %}
         <input type="submit">
       </form>
 
